fix: remove the z-index on post
with material design theme, the user card causes  the flair of the group to go behind the card instead of infront

--- a/assets/stylesheets/retort.scss
+++ b/assets/stylesheets/retort.scss
@@ -1,4 +1,4 @@
-.topic-post .topic-body { z-index: 3; }
+// .topic-post .topic-body { z-index: 3; }
 
 .post-retort {
   background: dark-light-diff($primary, $secondary, 25%, -25%);
